Add a standard gamepad mapping for the new Xbox One S controller in Bluetooth mode on Mac.

In this mode, the controller acts like a standard HID gamepad device,
requiring only minor mapping fixups for proper functionality.

BUG=644139
TEST=http://html5gamepad.com/

Review-Url: https://codereview.chromium.org/2314553002
Cr-Commit-Position: refs/heads/master@{#416580}

Former-commit-id: 6f9bf0317b8f29113d4d7c4f5742397c68c3e410